# advanced_programming_2023-2024

./: .gitignore  Makefile  README.md  exam_rules.md  homework_rules.md  syllabus.md
.github/workflows/: marp-to-pages.yml  md-to-pages.yml
exams/: README.md
exams/2024-01-09_simulation/: part1.md  part2.md
exams/2024-01-11_simulation/: part2.md
exams/2024-01-17/: part1.md  part2.md
exams/2024-02-13/: README.md  part1_red.md  part2.md  part2_red.md
exams/2024-06-11/: part1.md  part2.md
exams/2024-07-17/: part1.md  part2.md
exercises/01/: 01-intro_unix.md
exercises/02/: 02-c++_intro.md
exercises/03/: 03-c++_classes.md
exercises/04/: 04-c++_inheritance_polymorphism.md
exercises/05/: 05-c++_functions_templates.md
exercises/06/: 06-c++_stl_move.md
exercises/07/: 07-c++_make_libraries.md
exercises/08/: 08-c++_cmake_optimization_debug_test.md
exercises/09/: 09-py_intro.md
exercises/10/: 10-py_classes_modules.md
exercises/11/: 11-py_scicomp.md
exercises/12/: 12-py_c++.md
exercises/12/solutions/ex3/: CMakeLists.txt  setup.py
homeworks/: homework_01.md  homework_02.md  homework_03.md  homework_1.md
labs/: 01-intro_unix.md  Makefile
labs/01/: 01-intro_unix.md
labs/01-intro_unix/: prompt.md
labs/02/: 02-intro_c++.md
lectures/: 01-intro_unix.md  Makefile
lectures/01/: 01-intro_unix.md
lectures/02/: 02-c++_intro.md  02-intro_c++.md
lectures/03/: 03-c++_classes.md
lectures/04/: 04-c++_inheritance_polymorphism.md
lectures/05/: 05-c++_function_templates.md  05-c++_functions_templates.md
style/: custom.css
(+66 files in other folders)
